Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-6411

[C++][Parquet] DictEncoderImpl<T>::PutIndicesTyped has bad performance on some systems

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 0.15.0
    • C++

    Description

      I was doing some benchmarking and noticed that this function showed up as slow due to __memmove_avx_unaligned_erms. I'm interested to investigate why this is, but for me it's fixed by changing the std::vector::reserve call to std::vector::resize and instead assigning elements into buffered_indices_. I'll add a Python benchmark that illustrates the problem to see if it shows up on other systems

      Attachments

        Issue Links

          Activity

            People

              wesm Wes McKinney
              wesm Wes McKinney
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 20m
                  1h 20m